--- a/src/main/resources/static/assets/css/material-dashboard.css
+++ b/src/main/resources/static/assets/css/material-dashboard.css
@@ -4951,6 +4951,9 @@ fieldset[disabled] .navbar .btn-link:focus {
 
 footer {
     padding: 15px 0;
+    padding: 15px 0;
+    position: fixed;
+    bottom: 0;
 }
 
 footer ul {
