--- a/src/main/resources/static/assets/css/material-dashboard.css
+++ b/src/main/resources/static/assets/css/material-dashboard.css
@@ -4952,7 +4952,7 @@ fieldset[disabled] .navbar .btn-link:focus {
 footer {
     padding: 15px 0;
     padding: 15px 0;
-    position: fixed;
+ /*    position: fixed; */
     bottom: 0;
 }
 
